# groot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  publish.yml
migrations/2021-03-10-232613_create_collections/: down.sql  up.sql
migrations/2021-03-14-025247_create_collection_versions/: down.sql  up.sql
src/: api.rs  config.rs  main.rs  models.rs  schema.rs
src/cli/: commands.rs  mod.rs
src/db_utils/: mod.rs
src/sync/: collections.rs  common.rs  decode.rs  mod.rs  roles.rs  utils.rs
src/web/: mod.rs  routes.rs  server.rs
