[package]
name = "groot"
version = "0.2.1"
description = "The coolest guardian of the galaxy!"
repository = "https://github.com/fao89/groot"
authors = ["Fabricio Aguiar <fabricio.aguiar@gmail.com>"]
readme = "README.md"
license = "GPL-2.0+"
edition = "2018"
keywords = ["galaxy", "ansible", "role", "collection"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features=["json"]}
serde_json = "1.0"
tokio = { version = "1.2", features = ["macros", "rt-multi-thread", "fs"] }
anyhow ="1.0"
url = "2.2"
structopt = "0.3"
futures = "0.3"
yaml-rust = "0.4"
warp = "0.3"
pretty_env_logger = "0.4"
