[package]
name = "groot"
version = "0.4.0"
description = "The coolest guardian of the galaxy!"
repository = "https://github.com/fao89/groot"
authors = ["Fabricio Aguiar <fabricio.aguiar@gmail.com>"]
readme = "README.md"
license = "GPL-2.0+"
edition = "2018"
keywords = ["galaxy", "ansible", "role", "collection"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features=["json"]}
serde_json = "1.0"
tokio = { version = "1.29", features = ["rt-multi-thread", "fs"] }
anyhow ="1.0"
url = "2.4"
futures = "0.3"
yaml-rust = "0.4"
pretty_env_logger = "0.5"
actix-web = "4.3"
actix-files = "0.6"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
config = "0.13"
semver = "1.0"
diesel = { version = "2.1", features = ["postgres", "r2d2", "serde_json"] }
diesel_migrations = "2.1"
