[package]
name = "groot"
version = "0.6.1"
description = "The coolest guardian of the galaxy!"
repository = "https://github.com/fao89/groot"
authors = ["Fabricio Aguiar <fabricio.aguiar@gmail.com>"]
readme = "README.md"
license = "GPL-2.0+"
edition = "2018"
keywords = ["galaxy", "ansible", "role", "collection"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features=["json"]}
serde_json = "1.0"
tokio = { version = "1.24", features = ["rt-multi-thread", "fs"] }
anyhow ="1.0"
url = "2.5"
futures = "0.3"
yaml-rust = "0.4"
pretty_env_logger = "0.5"
log = "0.4"
actix-web = "4.9"
actix-files = "0.6"
actix-multipart = "0.7"
serde = { version = "1.0", features = ["derive"] }
paperclip = { version = "0.9", features = ["actix4", "swagger-ui"] }
dotenv = "0.15"
config = "0.15"
semver = "1.0"
r2d2_redis = "0.14"
diesel = { version = "2.2", features = ["postgres", "r2d2", "serde_json"] }
diesel_migrations = "2.2"
uuid = { version = "1.11", features = ["v4"] }
base64 = "0.22"
tower = { version = "0.4", features = ["limit", "util", "buffer"] }
